--- a/Document/Enchanted_Wings_Marvels_Of_Butterfly_Species.ipynb
+++ b/Document/Enchanted_Wings_Marvels_Of_Butterfly_Species.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "PROJECT TITTLE : Enchanted Wings: Marvels Of Butterfly Species\n",
+        "PROJECT TITLE : Enchanted Wings: Marvels Of Butterfly Species\n",
         "\n",
         "Team ID : LTVIP2025TMID40802\n",
         "\n",
